--- a/cursoNodeYoutube/package.json
+++ b/cursoNodeYoutube/package.json
@@ -13,6 +13,10 @@
   "author": "Victor Lima",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "mysql2": "^3.7.1",
+    "sequelize": "^6.35.2"
   }
 }
