--- a/cursoNodeYoutube/package.json
+++ b/cursoNodeYoutube/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^8.1.0",
     "mysql2": "^3.7.1",
     "sequelize": "^6.35.2"
   }
