--- a/cursoNodeYoutube/package.json
+++ b/cursoNodeYoutube/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "mongoose": "^8.1.0",
     "mysql2": "^3.7.1",
     "sequelize": "^6.35.2"
