--- a/cursoNodeYoutube/package.json
+++ b/cursoNodeYoutube/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "NodeJS"
@@ -13,14 +13,18 @@
   "author": "Victor Lima",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "mysql2": "^3.7.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.35.2"
   }
 }
